syntax = "proto3";

option go_package = "github.com/DIMO-Network/vehicle-signal-decoding/pkg/grpc";

package grpc;

// Configuration proto used by Hardware. It MUST be in sync with what Hardware uses, so be extra cautious.
// DO NOT CHANGE, ONLY ADD SETTINGS, CONSULT HARDWARE TEAM

// mostly power settings
message DeviceSetting {
  string template_name = 1;
  float battery_critical_level_voltage = 2;
  float safety_cut_out_voltage = 3;
  float sleep_timer_event_driven_interval_secs = 4;
  float sleep_timer_event_driven_period_secs = 5;
  float sleep_timer_inactivity_after_sleep_secs = 6;
  float sleep_timer_inactivity_fallback_interval_secs = 7;
  float wake_trigger_voltage_level = 8;
  float min_voltage_obd_loggers = 9;
  float location_frequency_secs = 10;
}

// PIDs configuration for device to query obd
message PIDConfig {
  string name = 1;
  uint32 header = 2;
  uint32 mode = 3;
  uint32 pid = 4;
  string formula = 5;
  uint32 interval_seconds = 6;
  string protocol = 7;
  bool can_flow_control_clear = 8;
  string can_flow_control_id_pair = 9;
  uint32 response_header = 10;
}

message PIDRequests {
  string template_name = 1;
  string version = 2;
  repeated PIDConfig requests = 3;
}